--- a/admissionfrontend/src/app/adminview/adminview.component.html
+++ b/admissionfrontend/src/app/adminview/adminview.component.html
@@ -1,1 +1,218 @@
-<p>adminview works!</p>
+<div style="position:fixed">
+    <br />
+    <div class="table-responsive" style="max-height: 99vh;width:101vw;">
+        <div class="row">
+            <div class="col-2"><br />
+                <div
+                    style="background-color: #1c1d63;color: white !important;padding: 0.7rem;border-bottom-right-radius: 60px;border-top-right-radius: 60px">
+                    <h3>Estd : 1998 </h3>
+                </div>
+            </div>
+            <div class="col" style="display: flex;justify-content:center;align-items: center;max-height: 20vh;">
+                <img src="assets/mainlogo.png" style="height: 20vh;width:10vw" />
+            </div>
+            <div class="col-2"><br />
+                <div
+                    style="background-color: #1c1d63;color: white !important;padding: 0.7rem;border-bottom-left-radius: 60px;border-top-left-radius: 60px;text-align: right;">
+                    <h3>
+                        <a style="text-decoration: none;color: white !important;" href="https://www.mits.ac.in/"
+                            target="_blank">www.mits.ac.in</a>
+
+                        &nbsp;
+                    </h3>
+                </div>
+            </div>
+        </div>
+        <div style="margin: 2rem;text-align:center;margin-top: 0.5rem;color: #1c1d63;">
+            <h1 style="font-family: 'Poppins', sans-serif;">MADANAPALLE INSTITUTE OF TECHNOLOGY AND
+                SCIENCE</h1>
+            <div style="line-height: 10px;">
+                <h5>UGC - AUTONOMOUS </h5>
+                <strong>Affiliated to JNTUA , Ananthapuramu & Approved by AICTE , New Delhi</strong>
+            </div><br />
+            <h4>Madanapalle , Chittoor Dist., AndhraPradesh , India</h4>
+            <br>
+            <h1>APPLICATION FORM</h1>
+            <h3>Academic Year (20 - )</h3>
+            <h1>CATEGORY </h1><br />
+            <strong>Admission into</strong>
+
+            <table class="table table-bordered " style="text-align:left">
+                <tbody>
+                    <tr>
+                        <td>Branch Applied For </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Full Name of the Candidate</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Roll No </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Hall Ticket</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Rank</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div> FOR OFFICE USE - CHECK LIST<br /><br />
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>INTER TC & STUDY
+                                    CERTIFICATES</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>UG TC & STUDY CERTIFICATES</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>OTHERS/CAST/INCOME/RATION
+                                    CARD</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>INTER MARKS MEMO</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>UG-PC</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>AADHAR CARD</label><br />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-1">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col" style="text-align: left"> <label>2 PASS PORT SIZE PHOTOS</label><br />
+                            </div>
+                        </div>
+                        <br />
+
+
+                    </div>
+
+                    <div class="col" style="text-align: left">
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>ALLOTMENT ORDER</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>JOINING REPORT</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>RECEIPT OF CERTIFICATES FORM</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>HALL TICKET</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>RANK CARD</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>6TH TO 10TH STUDY CERTIFICATES</label>
+                            </div>
+                        </div><br />
+                        <div class="row">
+                            <div class="col-1"><input type="checkbox"></div>
+                            <div class="col"><label>SSC MARKS MEMO</label>
+                            </div>
+                        </div><br />
+                    </div>
+                </div>
+            </div>
+            <div>
+
+
+                <table class="table table-bordered" style="text-align:left ;">
+                    <tbody>
+                        <tr>
+                            <td>Full Name of the Candidate (In Capitals):<br />
+                                (As per SSC)
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Date of Birth (DD/MM/YY) 
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Gender: Male/Female
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Father's / Guardian Name
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Mother's Name
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Aadhar Number 
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td> Address
+                            </td>
+                            <td></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
+
+        </div>
+    </div>
+</div>
