--- a/admissionfrontend/src/app/adminview/adminview.component.html
+++ b/admissionfrontend/src/app/adminview/adminview.component.html
@@ -474,10 +474,10 @@
     <div *ngIf="viewTop">
         <br />
         <button class="btn" (click)="logout()"
-            style="box-shadow: none;float: right;color: #a5081a;font-weight: 700;">Logout</button>
+        style="box-shadow: none;float: right;color: #a5081a;font-weight: 700;">Logout</button>
         <button class="btn btn-success" *ngIf="role=='superadmin'" style="box-shadow: none;float: right;"
-            (click)="adduser=true">ADD USER</button>
-
+        (click)="adduser=true">ADD USER</button>
+        <div style="position: absolute;padding-left: 10%;box-shadow: none;float: left;font-weight: bold;font-size: 1rem;"> Registrations : {{registrations}}</div>
         <div style="display: flex;justify-content:center;">
             <input [(ngModel)]="type" placeholder="start typing hallticket number ..." (click)="showData=false"
                 class="form-control shadow-none" style="width: 20vw;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;"
