--- a/admissionfrontend/src/app/registration/registration.component.html
+++ b/admissionfrontend/src/app/registration/registration.component.html
@@ -22,15 +22,18 @@
         style="padding: 1.5rem;font-size: 0.9rem;padding-top: 0rem;height: 90vh;">
 
         <label style="font-weight:500">Hall Ticket Number <strong style="color: crimson;">*</strong></label><br />
-        <input formControlName="hallticket" (click)="errorStatus=false" [readonly]="optstatus"
-            class="form-control shadow-none" />
+        <input formControlName="hallticket" [disabled]="optstatus" (click)="errorStatus=false" [readonly]="optstatus"
+            class="form-control shadow-none" placeholder="ex : 1234567890 " />
+            <!-- {{registration.controls.hallticket.errors | json}} -->
         <span *ngIf="registration.controls.hallticket.errors?.required && errorStatus"
             style="color:crimson;font-size:0.8rem;font-weight: 500;">Please fill hall ticket
             number</span>
+        <span *ngIf="(registration.controls.hallticket.errors?.minlength || registration.controls.hallticket.errors?.maxlength) && errorStatus"
+            style="color:crimson;font-size:0.8rem;font-weight: 500;">Hall Ticket Number must be length of 10</span>
         <br />
         <label style="font-weight:500">Mail Id <strong style="color: crimson;">*</strong></label><br />
-        <input (click)="errorStatus=false" formControlName="otpmail" [readonly]="optstatus"
-            class="form-control shadow-none" />
+        <input (click)="errorStatus=false" [disabled]="optstatus" formControlName="otpmail" [readonly]="optstatus"
+            class="form-control shadow-none" placeholder="mits@gmail.com" />
 
         <span *ngIf="errorStatus" style="color:crimson;font-size:0.8rem">
             <span style="font-weight:500 ;" *ngIf="registration.controls.otpmail.errors?.required">Please fill Mail
