--- a/admissionfrontend/src/app/editdetails/editdetails.component.html
+++ b/admissionfrontend/src/app/editdetails/editdetails.component.html
@@ -198,8 +198,16 @@
                                 CARD</label><br />
                         </div>
                     </div>
-                    <br />
 
+                    <br />
+                    <div class="row">
+                        <div class="col-1">
+                            <input formControlName="othercert" [checked]="admissionform.value.parentphoto"
+                                type="checkbox">
+                        </div>
+                        <div class="col" style="text-align: left"> <label>Parent's photo</label><br />
+                        </div>
+                    </div>
 
 
 
