--- a/admissionfrontend/src/app/adminview/adminview.component.html
+++ b/admissionfrontend/src/app/adminview/adminview.component.html
@@ -620,7 +620,7 @@
         <button class="btn btn-danger" (click)="logout()"
             style="box-shadow: none;float: right;color: white;margin-left :1rem;font-weight: 700;">Log Out</button>
         <button class="btn btn-success" *ngIf="role=='superadmin'"
-            style="box-shadow: none;float: right;font-weight: 700;" (click)="adduser=true"> Users</button>
+            style="box-shadow: none;float: right;font-weight: 700;" (click)="adduser=true;formvalue=false"> Users</button>
         <button (click)="exportexcel()" class="btn btn-primary" style="float: left;margin-left: 1rem;">Registrations :
             {{reglen}}</button>
 
@@ -1232,8 +1232,8 @@
                                         style="font-size: 1.3rem;margin-top: 0.5rem;"></i></span>
                             </span>
                         </div>
-                        <span class="danger" style="font-size: 0.8rem;color: #df4759;;font-weight: bold;">
-                            <span *ngIf="k.formname=='mail' && errorMessage=='User Exist'">
+                        <span class="danger" style="font-size: 0.8rem;color: #df4759;font-weight: bold;">
+                            <span *ngIf="k.formname=='mail' && errorMessage=='User Exist' && formvalue==true">
                                 &nbsp;{{errorMessage}}
                             </span>
                             <!-- <span *ngIf="k.formname=='password' && errorMessage=='Invalid password'">
